--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <aside class="mdc-drawer material-lessons-drawer">
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
-        <a  href="/"class="mdc-list-item mdc-list-item--selected" role="option" aria-selected="true" tabindex="0">
+        <a href="/" class="mdc-list-item mdc-list-item--selected" role="option" aria-selected="true" tabindex="0">
           <span class="mdc-list-item__text">Zero Waste Academy</span>
         </a>
         <hr class="mdc-list-divider">
@@ -68,117 +68,91 @@
 
     <div class="mdc-top-app-bar--fixed-adjust">
       <main class="main-content article">
-        <!-- <section class="article-header">
-          <p class="article-meta">
-            <span class="mdc-typography--overline">Category</span>
-            <span class="mdc-typography--overline">4 Days Ago</span>
-          </p>
-          <h2 class="mdc-typography--headline3 article-title">The Secret Life of Birds</h2>
-          <p class="mdc-typography--body1 article-preview">Just then she heard something splashing about in the pool a
-            little way off, and she swam nearer to make out what it was at first.</p>
-          <a class="author-meta" href="#">
-            <img src="https://via.placeholder.com/200x75.png?text=Zero%20Waste%0AAcademy" alt="" class="author-image">
-            <p class="mdc-typography--body1 author">Betty Eghan</p>
-          </a>
-          <img src="https://via.placeholder.com/200x75.png?text=Zero%20Waste%0AAcademy" class="hero" alt="">
-          <p class="mdc-typography--body2 hero-caption">In another moment Alice was through the glass, and had jumped
-            lightly down into the Looking-glass room. The very first thing she did was to look whether there was a fire
-            in the fireplace.</p>
-        </section>
-        <section class="article-body">
-          <p class="mdc-typography--body1">She very soon came to an open field, with a wood on the other side of it: it
-            looked much darker than the last wood, and Alice felt a little timid about going into it. However, on second
-            thoughts, she made up her mind to go on.</p>
-          <p class="mdc-typography--body1">So they walked on together though the wood, Alice with her arms clasped
-            lovingly round the soft neck of the Fawn, till they came out into another open field, and here the Fawn gave
-            a sudden bound into the air, and shook itself free from Alice’s arms. ‘I’m a Fawn!’ it cried out in a voice
-            of delight, ‘and, dear me! you’re a human child!’ A sudden look of alarm came into its beautiful brown eyes,
-            and in another moment it had darted away at full speed.</p>
-          <p class="mdc-typography--body1">Alice stood looking after it, almost ready to cry with vexation at having
-            lost her dear little fellow-traveller so suddenly. ‘However, I know my name now.’ she said, ‘that’s some
-            comfort. Alice—Alice—I won’t forget it again. And now, which of these finger-posts ought I to follow, I
-            wonder?’</p>
-          <p class="mdc-typography--body1">It was not a very difficult question to answer, as there was only one road
-            through the wood, and the two finger-posts both pointed along it. ‘I’ll settle it,’ Alice said to herself,
-            ‘when the road divides and they point different ways.’</p>
-          <p class="mdc-typography--body1">But this did not seem likely to happen. She went on and on, a long way, but
-            wherever the road divided there were sure to be two finger-posts pointing the same way, one marked ‘TO
-            TWEEDLEDUM’S HOUSE’ and the other ‘TO THE HOUSE OF TWEEDLEDEE.’</p>
-          <p class="mdc-typography--body1">‘I do believe,’ said Alice at last, ‘that they live in the same house! I
-            wonder I never thought of that before—But I can’t stay there long. I’ll just call and say “how d’you do?”
-            and ask them the way out of the wood. If I could only get to the Eighth Square before it gets dark!’ So she
-            wandered on, talking to herself as she went, till, on turning a sharp corner, she came upon two fat little
-            men, so suddenly that she could not help starting back, but in another moment she recovered herself, feeling
-            sure that they must be.</p>
-          <p class="mdc-typography--body1">Alice did not like shaking hands with either of them first, for fear of
-            hurting the other one’s feelings; so, as the best way out of the difficulty, she took hold of both hands at
-            once: the next moment they were dancing round in a ring. This seemed quite natural (she remembered
-            afterwards), and she was not even surprised to hear music playing: it seemed to come from the tree under
-            which they were dancing, and it was done (as well as she could make it out) by the branches rubbing one
-            across the other, like fiddles and fiddle-sticks.</p>
-        </section> -->
         <p>
-          Що таке Zero Waste Academy - це унікальний навчально-практичний курс про принципи керування відходами (ТПВ)
-          відповідно до принципів zerо waste та циркулярної економіки.
+          Навчально-практичний курс з підготовки фахівців для управління відходами відповідно до нового законодавства
         </p>
-        <p>
-          Мета проєкту - надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ,
-          представників ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів,
-          зміни/адаптації стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.
-        </p>
-        <p>
-          Завдання:
-          підготувати для українського ринку кваліфікованих та озброєних передовими знаннями фахівців/фахівчинь;
-          впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні;
-          зменшити кількість відходів на полігонах;
-          надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка переконалася, що
-          запобігання
-          та ієрархія у сфері відходів
-          допомогти громадам України у процесі перетворення на туристичні привабливі та чисті.
-        </p>
-        <p>
-          Переваги
-          Наші переваги засвідчать наші випускники та випускниці:
-          системний підхід формує картину світу, а не фрагментарні уявлення, які згодом забудуться;
-          мультидисциплінарність - ми надаємо знання та навички не тільки з теми керування відходами, а також формуємо у
-          Вас самодостатнього та універсального менеджера/ку: ви розумієтеся у проєктному менеджменті, у комунікаційний
-          та
-          адвокаційний кампаніях, у джерелах фінансування та фандрейзингу. Навіть якщо ці завдання у команді виконуєте
-          не
-          ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та витрачати кошти на те, що працює.
-          ціннісний підхід до справи - наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що
-          робите, як і навіщо трансформувати свою реальність;
-          коучингова підтримка - у тому випадку, коли “лупаєте скалу”, працюєте над зміностворенням, важливо знати та
+        <h1>
+          ZERO WASTE Academy
+        </h1>
+        <a class="mdc-button" href="#">
+          <span class="mdc-button__label">Почати навчання</span>
+        </a>
+        <img src="assets/main.svg">
+
+        <h2>Що таке Zero Waste Academy</h2>
+        <p>це унікальний навчально-практичний курс про принципи керування відходами (ТПВ) відповідно до принципів zerо
+          waste та циркулярної економіки.</p>
+
+        <h2>Мета проєкту</h2>
+        <img src="assets/goal.svg">
+        <p>надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ, представників
+          ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів, зміни/адаптації
+          стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.</p>
+
+        <h2>Завдання</h2>
+        <ul>
+          <li>підготувати для українського ринку кваліфікованих та озброєних передовими знаннями фахівців/фахівчинь</li>
+          <li>зменшити кількість відходів на полігонах</li>
+          <li>впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні
+          </li>
+          <li>допомогти громадам України у процесі перетворення на туристичні привабливі та чисті</li>
+          <li>надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка переконалася, що
+            запобігання та ієрархія у сфері відходів </li>
+        </ul>
+
+        <h2>Переваги</h2>
+        <p>Наші переваги засвідчать наші випускники та випускниці:</p>
+        <p>системний підхід формує картину світу, а не фрагментарні уявлення, які згодом забудуться</p>
+        <p>ціннісний підхід до справи - наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що
+          робите, як і навіщо трансформувати свою реальність</p>
+        <p>мультидисциплінарність - ми надаємо знання та навички не тільки з теми керування відходами, а також формуємо
+          у Вас самодостатнього та універсального менеджера/ку: ви розумієтеся у проєктному менеджменті, у
+          комунікаційний та адвокаційний кампаніях, у джерелах фінансування та фандрейзингу. Навіть якщо ці завдання у
+          команді виконуєте не ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та витрачати кошти на
+          те, що працює</p>
+        <p>коучингова підтримка - у тому випадку, коли “лупаєте скалу”, працюєте над зміностворенням, важливо знати та
           вміти раціонально використовувати свої ресурси. Ваші приховані можливості, віру у себе для роботи на рівні
-          громади допоможе розкрити наші коучі, які спеціалізуються з теми громадянського суспільства та інновацій.
-        </p>
-        <p>
-          Історія (гіперпосилання на успішні історії)
-          За 2020-2021 роки ми випустили 3 курси, а це близько 100 випускників та випускниць. Курс Zero Waste Academy
-          орієнтований на нефахівців.
-          Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників ОМС, експертів у сфері
-          керування
-          відходами.
-        </p>
-        <p>
-          Тематика курсів, які знання отримає слухач
-        </p>
-        <p>
-          Законодавство
-          Проєктний менеджмент
-          Технології утилізації
-          Циркулярна економіка
-          Кейси
-        </p>
-        <p>
-          Реєстрація
-        </p>
-        <p>
-          Тест “Хочеш перевірити знання?”
-        </p>
-        <p>
-          Контакти:
-        </p>
+          громади допоможе розкрити наші коучі, які спеціалізуються з теми громадянського суспільства та інновацій</p>
+
+        <h2>Історія</h2>
+        <p>За 2020-2021 роки ми випустили 3 курси, а це близько 100 випускників та випускниць</p>
+        <a class="mdc-button" href="#">
+          <span class="mdc-button__label">Перейти</span>
+        </a>
+        <label>Курс Zero Waste Academy орієнтований на нефахівців.</label>
+
+        <label>Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників ОМС, експертів у
+          сфері
+          керування відходами</label>
+        <a class="mdc-button" href="#">
+          <span class="mdc-button__label">Перейти</span>
+        </a>
+
+        <h2>Тематика курсів, які знання отримає слухач</h2>
+        <img src="assets/zakon.svg">
+        <p>Законодавство</p>
+
+        <img src="assets/menegment.svg">
+        <p>Проєктний менеджмент</p>
+
+        <img src="assets/disposal.svg">
+        <p>Технології утилізації</p>
+
+        <img src="assets/economic.svg">
+        <p>Циркулярна економіка</p>
+
+        <img src="assets/case.svg">
+        <p>Кейси</p>
+
+        <h2>Перевір свої знання у сфері Zero waste та приєднуйся до Zero waste academy</h2>
+
+        <a class="mdc-button" href="#">
+          <span class="mdc-button__label">Зареєструватися на курс</span>
+        </a>
+        <a class="mdc-button" href="#">
+          <span class="mdc-button__label">Пройти тест</span>
+        </a>
+
       </main>
     </div>
   </div>
