--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 
-<body class="mdc-typography language-css media-template">
-  <aside class="mdc-drawer material-lessons-drawer">
+<body class="mdc-typography media-template">
+  <aside class="mdc-drawer zwa-drawer">
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
         <a href="/" class="mdc-list-item mdc-list-item--selected" role="option" aria-selected="true" tabindex="0">
@@ -35,19 +35,18 @@
   </aside>
   <div class="mdc-drawer-scrim"></div>
   <div class="mdc-drawer-app-content">
-    <header
-      class="material-lessons-top-app-bar mdc-top-app-bar mdc-top-app-bar--short mdc-top-app-bar--short-collapsed">
+    <header class="zwa-top-app-bar mdc-top-app-bar mdc-top-app-bar--short mdc-top-app-bar--short-collapsed">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
         <a class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
       </section>
     </header>
-    <header class="mdc-top-app-bar media-top-app-bar">
+    <header class="mdc-top-app-bar media-top-app-bar header-row">
       <section class="media-menu-section mdc-top-app-bar__section">
         <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
       </section>
       <section class="mdc-top-app-bar__section contained-section header-section">
         <nav class="mdc-list">
-          <a class="mdc-list-item logo" role="option" href="/">
+          <a class="mdc-list-item logo" role="option" href="./">
             <img src="assets/logo.png" alt="Zero Waste Academy">
           </a>
           <a class="mdc-list-item" role="option" href="#team.html">
@@ -59,7 +58,7 @@
           <a class="mdc-list-item" role="option" href="#teaching.html">
             <span class="mdc-list-item__text">Навчання</span>
           </a>
-          <a class="mdc-list-item" role="option" href="certificate.html">
+          <a class="mdc-list-item" role="option" href="#certificate.html">
             <span class="mdc-list-item__text">Сертифікат</span>
           </a>
         </nav>
@@ -67,95 +66,197 @@
     </header>
 
     <div class="mdc-top-app-bar--fixed-adjust">
-      <main class="main-content article">
-        <p>
-          Навчально-практичний курс з підготовки фахівців для управління відходами відповідно до нового законодавства
-        </p>
+      <div class="main-content article">
+        <img src="assets/mainCity.svg">
         <h1>
-          ZERO WASTE Academy
+          ZERO WASTE<br />
+          Academy
         </h1>
+        <p class="mdc-typography--subtitle1">
+          вчися онлайн у кращих<br />
+          разом з кращими керувати<br />
+          відходами по-сучасному
+        </p>
         <a class="mdc-button" href="#">
           <span class="mdc-button__label">Почати навчання</span>
         </a>
-        <img src="assets/main.svg">
+      </div>
+    </div>
 
+    <div class="odd">
+      <div class="whatis article">
         <h2>Що таке Zero Waste Academy</h2>
-        <p>це унікальний навчально-практичний курс про принципи керування відходами (ТПВ) відповідно до принципів zerо
-          waste та циркулярної економіки.</p>
+        <p>це унікальний навчально-практичний курс про сучасне керування відходами (ТПВ) відповідно до принципів zero
+          waste та циркулярної економіки.
+        </p>
+      </div>
+    </div>
 
+    <div>
+      <div class="target article">
         <h2>Мета проєкту</h2>
-        <img src="assets/goal.svg">
         <p>надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ, представників
           ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів, зміни/адаптації
           стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.</p>
+      </div>
+    </div>
 
+    <div class="odd">
+      <div class="tasks article">
         <h2>Завдання</h2>
-        <ul>
+        <ol>
           <li>підготувати для українського ринку кваліфікованих та озброєних передовими знаннями фахівців/фахівчинь</li>
-          <li>зменшити кількість відходів на полігонах</li>
           <li>впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні
           </li>
-          <li>допомогти громадам України у процесі перетворення на туристичні привабливі та чисті</li>
+          <li>зменшити кількість відходів на полігонах</li>
           <li>надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка переконалася, що
-            запобігання та ієрархія у сфері відходів </li>
-        </ul>
+            запобігання появі відходів та ієрархія у сфері відходів є єдино вірними рішеннями у керуванні ТПВ у
+            сучасному
+            світі</li>
+          <li>допомогти громадам України у процесі перетворення на туристичні привабливі та чисті</li>
+        </ol>
+      </div>
+    </div>
 
+    <div>
+      <div class="benefits article">
         <h2>Переваги</h2>
-        <p>Наші переваги засвідчать наші випускники та випускниці:</p>
-        <p>системний підхід формує картину світу, а не фрагментарні уявлення, які згодом забудуться</p>
-        <p>ціннісний підхід до справи - наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що
-          робите, як і навіщо трансформувати свою реальність</p>
-        <p>мультидисциплінарність - ми надаємо знання та навички не тільки з теми керування відходами, а також формуємо
-          у Вас самодостатнього та універсального менеджера/ку: ви розумієтеся у проєктному менеджменті, у
-          комунікаційний та адвокаційний кампаніях, у джерелах фінансування та фандрейзингу. Навіть якщо ці завдання у
-          команді виконуєте не ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та витрачати кошти на
-          те, що працює</p>
-        <p>коучингова підтримка - у тому випадку, коли “лупаєте скалу”, працюєте над зміностворенням, важливо знати та
-          вміти раціонально використовувати свої ресурси. Ваші приховані можливості, віру у себе для роботи на рівні
-          громади допоможе розкрити наші коучі, які спеціалізуються з теми громадянського суспільства та інновацій</p>
+        <h3>Системний підхід</h3>
+        <p>формує цілісні знання у сфері поводження з ТПВ відповідно до циркулярної економіки, новий погляд та рішення у
+          сфері відходів, а не фрагментарні уявлення, які згодом забудуться</p>
+        <h3>Мультидисциплінарність</h3>
+        <p>ми надаємо знання та навички не тільки з керування відходами, а також формуємо у Вас навички самодостатнього
+          та
+          універсального менеджера/ки: що таке проєктноний менеджмент, вмієте організовувати, оцінвати комунікаційні та
+          адвокаційні кампанії, знаєте де та як залучати ресурси у проєкт. Навіть якщо ці завдання у команді виконуєте
+          не
+          ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та успішно керувати проєктом</p>
+        <h3>Ціннісний підхід до справи</h3>
+        <p>наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що робите, як і навіщо
+          трансформувати свою реальність - ви переконаєтеся, що zero waste & circular economy "на часі", зрозумієте,
+          чому
+          важливо говорити про ваші ідеї та навіщо трансформувати свою реальність</p>
+        <h3>Коучингова підтримка</h3>
+        <p>знання та вміння раціонально використовувати внутрішні ресурси дозволять працювати над змінотворенням
+          ефективніше. Ваші приховані можливості, віру у себе для роботи на рівні громади допоможе розкрити наші коучі,
+          які спеціалізуються з теми громадянського суспільства та інновацій</p>
+        <a href="#">Проєкти наших випускників - найкращий доказ переваг навчання</a>
+      </div>
+    </div>
 
+    <div class="odd">
+      <div class="history article">
         <h2>Історія</h2>
-        <p>За 2020-2021 роки ми випустили 3 курси, а це близько 100 випускників та випускниць</p>
-        <a class="mdc-button" href="#">
-          <span class="mdc-button__label">Перейти</span>
-        </a>
-        <label>Курс Zero Waste Academy орієнтований на нефахівців.</label>
+        <p class="resume">За 2020-2021 роки ми провели 3 курси та випустили більше 100 випускників та випускниць</p>
+        <label>
+          <a class="mdc-button" href="#">
+            <span class="mdc-button__label">Читати...</span>
+          </a>
+          Курс Zero Waste Academy орієнтований на нефахівців/чинь
+        </label>
+        <label>
+          <a class="mdc-button" href="#">
+            <span class="mdc-button__label">Читати...</span>
+          </a>
+          Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників/ниць ОМС, керуючих ОСББ,
+          експертів/ок у сфері поводження з відходами
+        </label>
+      </div>
+    </div>
 
-        <label>Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників ОМС, експертів у
-          сфері
-          керування відходами</label>
-        <a class="mdc-button" href="#">
-          <span class="mdc-button__label">Перейти</span>
-        </a>
+    <div>
+      <div class="themes article">
+        <h2>Тематика курсів</h2>
+        <ul>
+          <li>
+            <h3>Циркулярна<br/>економіка</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Законодавство</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Технології<br/>утилізації</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Керування<br/>біовідходами</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Zero Waste City<br/>та сертифікація</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Адвокаційна<br/>та комунікаційна<br/>стратегія</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Проєктний<br/>менеджмент</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+          <li>
+            <h3>Кейси</h3>
+            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <a class="mdc-button" href="#">
+              <span class="mdc-button__label">Подивитися відео</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-        <h2>Тематика курсів, які знання отримає слухач</h2>
-        <img src="assets/zakon.svg">
-        <p>Законодавство</p>
-
-        <img src="assets/menegment.svg">
-        <p>Проєктний менеджмент</p>
-
-        <img src="assets/disposal.svg">
-        <p>Технології утилізації</p>
-
-        <img src="assets/economic.svg">
-        <p>Циркулярна економіка</p>
-
-        <img src="assets/case.svg">
-        <p>Кейси</p>
-
+    <div class="odd">
+      <div class="checks article">
         <h2>Перевір свої знання у сфері Zero waste та приєднуйся до Zero waste academy</h2>
-
         <a class="mdc-button" href="#">
           <span class="mdc-button__label">Зареєструватися на курс</span>
         </a>
         <a class="mdc-button" href="#">
           <span class="mdc-button__label">Пройти тест</span>
         </a>
-
-      </main>
+      </div>
     </div>
+
+    <div>
+      <div class="join article">
+        <h2>приєднатися до Zero waste academy</h2>
+        <a class="mdc-button" href="#">
+          <span class="mdc-button__label">Зареєструватися на курс</span>
+        </a>
+      </div>
+    </div>
+
+    <footer class="odd">
+      <div class="footer">
+        some text
+      </div>
+    </footer>
+
   </div>
+
   <script src="bundle.js" async></script>
 </body>
 
