--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#teaching.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Навчання</span>
         </a>
-        <a href="certificate.html" class="mdc-list-item" role="option">
+        <a href="#certificate.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Сертифікат</span>
         </a>
       </nav>
@@ -66,9 +66,8 @@
     </header>
 
     <div class="mdc-top-app-bar--fixed-adjust">
-      <div class="main-content article">
-        <img src="assets/mainCity.svg">
-        <h1>
+      <div class="head-content article">
+        <h1 class="mdc-typography--headline1">
           ZERO WASTE<br />
           Academy
         </h1>
@@ -77,33 +76,30 @@
           разом з кращими керувати<br />
           відходами по-сучасному
         </p>
-        <a class="mdc-button" href="#">
+        <a class="mdc-button mdc-button--raised" href="#teaching.html">
           <span class="mdc-button__label">Почати навчання</span>
         </a>
       </div>
     </div>
-
     <div class="odd">
       <div class="whatis article">
-        <h2>Що таке Zero Waste Academy</h2>
+        <h2 class="mdc-typography--headline2">Що таке Zero Waste Academy</h2>
         <p>це унікальний навчально-практичний курс про сучасне керування відходами (ТПВ) відповідно до принципів zero
           waste та циркулярної економіки.
         </p>
       </div>
     </div>
-
     <div>
       <div class="target article">
-        <h2>Мета проєкту</h2>
+        <h2 class="mdc-typography--headline2">Мета проєкту</h2>
         <p>надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ, представників
           ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів, зміни/адаптації
           стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.</p>
       </div>
     </div>
-
     <div class="odd">
       <div class="tasks article">
-        <h2>Завдання</h2>
+        <h2 class="mdc-typography--headline2">Завдання</h2>
         <ol>
           <li>підготувати для українського ринку кваліфікованих та озброєних передовими знаннями фахівців/фахівчинь</li>
           <li>впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні
@@ -117,10 +113,9 @@
         </ol>
       </div>
     </div>
-
     <div>
       <div class="benefits article">
-        <h2>Переваги</h2>
+        <h2 class="mdc-typography--headline2">Переваги</h2>
         <h3>Системний підхід</h3>
         <p>формує цілісні знання у сфері поводження з ТПВ відповідно до циркулярної економіки, новий погляд та рішення у
           сфері відходів, а не фрагментарні уявлення, які згодом забудуться</p>
@@ -143,10 +138,9 @@
         <a href="#">Проєкти наших випускників - найкращий доказ переваг навчання</a>
       </div>
     </div>
-
     <div class="odd">
       <div class="history article">
-        <h2>Історія</h2>
+        <h2 class="mdc-typography--headline2">Історія</h2>
         <p class="resume">За 2020-2021 роки ми провели 3 курси та випустили більше 100 випускників та випускниць</p>
         <label>
           <a class="mdc-button" href="#">
@@ -163,63 +157,62 @@
         </label>
       </div>
     </div>
-
     <div>
       <div class="themes article">
-        <h2>Тематика курсів</h2>
+        <h2 class="mdc-typography--headline2">Тематика курсів</h2>
         <ul>
           <li>
-            <h3>Циркулярна<br/>економіка</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <h3>Циркулярна<br />економіка</h3>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Законодавство</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
-            <h3>Технології<br/>утилізації</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <h3>Технології<br />утилізації</h3>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
-            <h3>Керування<br/>біовідходами</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <h3>Керування<br />біовідходами</h3>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
-            <h3>Zero Waste City<br/>та сертифікація</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <h3>Zero Waste City<br />та сертифікація</h3>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
-            <h3>Адвокаційна<br/>та комунікаційна<br/>стратегія</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <h3>Адвокаційна<br />та комунікаційна<br />стратегія</h3>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
-            <h3>Проєктний<br/>менеджмент</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <h3>Проєктний<br />менеджмент</h3>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Кейси</h3>
-            <p>Лекцію за цією темою<br/>дивись у курсі</p>
+            <p>Лекцію за цією темою<br />дивись у курсі</p>
             <a class="mdc-button" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
@@ -227,10 +220,10 @@
         </ul>
       </div>
     </div>
-
     <div class="odd">
       <div class="checks article">
-        <h2>Перевір свої знання у сфері Zero waste та приєднуйся до Zero waste academy</h2>
+        <h2 class="mdc-typography--headline2">Перевір свої знання у сфері Zero waste та приєднуйся до Zero waste academy
+        </h2>
         <a class="mdc-button" href="#">
           <span class="mdc-button__label">Зареєструватися на курс</span>
         </a>
@@ -239,19 +232,92 @@
         </a>
       </div>
     </div>
-
     <div>
       <div class="join article">
-        <h2>приєднатися до Zero waste academy</h2>
+        <h2 class="mdc-typography--headline2">приєднатися до Zero waste academy</h2>
         <a class="mdc-button" href="#">
           <span class="mdc-button__label">Зареєструватися на курс</span>
         </a>
       </div>
     </div>
-
     <footer class="odd">
+      <!--
+        TODO: generate html from parts
+      https://medium.com/hackernoon/using-html-components-with-webpack-f383797a5ca
+      https://stackoverflow.com/questions/61377908/how-to-generate-html-template-for-static-page-from-header-footer-and-css-js-inj
+    -->
       <div class="footer">
-        some text
+        <ul>
+          <li>
+            <h4 class="mdc-typography--headline4">Навігація</h4>
+          </li>
+          <li>
+            <a class="" href="#team.html">
+              <span class="">Команда</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#history-and-results.html">
+              <span class="">Історія та результати</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#teaching.html">
+              <span class="">Навчання</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#certificate.html">
+              <span class="">Сертифікат</span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h4 class="mdc-typography--headline4">Курси</h4>
+          </li>
+          <li>
+            <a class="" href="#">
+              <span class="">Базовий курс</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#">
+              <span class="">Поглиблений курс</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="#">
+              <span class="">Взаємодія з ментором</span>
+            </a>
+          </li>
+          <li>
+            <a class="mdc-typography--headline4" href="#">
+              <span class="">Отримати сертифікат</span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h4 class="mdc-typography--headline4">Контакти:</h4>
+          </li>
+          <li>
+            <a class="" href="#">
+              <span class="">Пошта</span>
+            </a>
+          </li>
+          <li>
+            <a class="" href="https://www.facebook.com/kharkivzerowaste">
+              <img src="assets/facebook.svg" alt="facebook">
+            </a>
+            <a class="" href="https://www.instagram.com/kharkiv_zero_waste/">
+              <img src="assets/instagram.svg" alt="instagram">
+            </a>
+            <a class="" href="#">
+              <img src="assets/youtube.svg" alt="youtube">
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
 
