fix button styles

--- a/index.html
+++ b/index.html
@@ -168,56 +168,56 @@
           <li>
             <h3>Циркулярна<br />економіка</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Законодавство</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Технології<br />утилізації</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Керування<br />біовідходами</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Zero Waste City<br />та сертифікація</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Адвокаційна<br />та комунікаційна<br />стратегія</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Проєктний<br />менеджмент</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
           <li>
             <h3>Кейси</h3>
             <p>Лекцію за цією темою<br />дивись у курсі</p>
-            <a class="mdc-button" href="#">
+            <a class="mdc-button mdc-button--raised" href="#">
               <span class="mdc-button__label">Подивитися відео</span>
             </a>
           </li>
@@ -292,7 +292,7 @@
             </a>
           </li>
           <li>
-            <a class="mdc-typography--headline4" href="#">
+            <a class="" href="#">
               <span class="">Отримати сертифікат</span>
             </a>
           </li>
